fixed css for controls on firefox

--- a/game/static/game/css/game.css
+++ b/game/static/game/css/game.css
@@ -30,7 +30,7 @@
     height: 200px;
     position: fixed;
     right: 20px;
-    width: 630px
+    width: 700px
 }
 
 #controls button {
